# pluralize

./: Makefile  README.md  pyproject.toml  setup.py
pluralize/: __init__.py
tests/: test_simple.py
